src/components/PanelButton.module.css
.panel_btn {
  font-family: inherit;
  font-size: 2rem;
  letter-spacing: 1px;
  color: white;
  background-color: #ff59cd;
  border: none;
  border-radius: 8px;
  margin-top: 3.2rem;
  padding: 1.6rem 2.4rem;
  cursor: pointer;
}
.panel_btn:hover {
  background-color: #cc47a4;
  transition: all 0.2s ease-out;
}

.A_modal_root {
  width: 100vw;
  height: 100vh;

  /* border: 4px dotted blueviolet; */
}

.A_modal_overlay {
  width: 100%;
  height: 100%;
}

.A_modal_container {
  /* height: 100%; */
  margin: 0;
  padding: 0;

  display: flex;
  justify-content: center;
  align-items: flex-start;

  /* border: 2px dotted orangered; */
}

.A_modal {
  max-width: calc(120rem - 12.8rem);
  width: 100%;
  /* height: calc(100vh - (4.8rem * 2)); */
  height: 60vh;
  margin: 0;
  margin-top: 4.8rem;
  padding: 3.2rem;
  border-radius: 8px;

  overflow-y: hidden;
}

.A_modal_close_button {
  width: 3rem;
  height: 3rem;
  top: 1.6rem;
  right: 1.6rem;

  /* border: 1px solid green; */
}
.A_modal_close_icon {
  width: 100%;
  height: 100%;
  fill: white;
  background-color: #333;
  border-radius: 50%;
}

.panel_title {
  font-size: 3rem;
  text-align: center;
  margin: 0 auto 3.2rem auto;
  padding: 0 0 2.4rem 0;
  color: #333;
  border-bottom: 2px solid #555;
}

/* Menu + Content */
.panel_menu_content_container {
  display: flex;
  gap: 3.2rem;

  /* height: calc(100vh - (4.8rem * 2) - (3.2rem * 4.75)); */
  height: calc(60vh - (3.2rem * 4.75));

  /* height: 100%; */
  /* min-height: 100vh; */
  /* height: 30rem; */

  /* border: 2px dotted blue; */
}

.panel_menu {
  list-style: none;
  width: 30%;
  color: #555;

  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;

  /* border: 1px solid grey; */
}
.panel_item {
  color: #333;

  /* border: 1px solid green; */
}

.panel_link,
.panel_link:link,
.panel_link:visited {
  font-size: 2rem;
  font-weight: 700;
  line-height: 1.1;
  cursor: pointer;
  display: inline-block;

  /* border: 1px solid orange; */
}
.panel_link:hover,
.panel_link:active {
  color: #cc47a4;
  transition: all 0.2s ease-out;
}

.panel_content {
  width: 70%;
  /* height: calc(100vh - (4.8rem * 2) - (3.2rem * 2)); */
  /* height: 30rem; */
  flex: 1 1 auto;

  font-size: 2rem;
  line-height: 1.6;
  overflow-y: auto;

  /* border: 2px solid red; */
}

/**************************/
/* BELOW 1200px */
/**************************/

@media (max-width: 75em) {
  .A_modal {
    /* max-width: calc(120rem - 12.8rem); */
    margin-left: 6.4rem;
    margin-right: 6.4rem;

    /* background-color: lightsalmon; */
  }
}

/**************************/
/* BELOW 768px (Tablet) */
/**************************/

/* 768 / 16 = 48 */
@media (max-width: 48em) {
  html {
    /* font-size: 9px; */
    /* 9px / 16px = 0.5625 = 56.25% */
    /* Percentage of user's browser font-size setting */
    font-size: 56.25%;
  }

  .A_modal {
    margin-left: 3.2rem;
    margin-right: 3.2rem;

    /* background-color: lightgreen; */
  }
}

/**************************/
/* BELOW 640px (Tablet) */
/**************************/

/* 640 / 16 = 40 */
@media (max-width: 40em) {
  .A_modal {
    height: 80vh;

    /* background-color: lightskyblue; */
  }

  .panel_menu_content_container {
    height: calc(80vh - (3.2rem * 4.75));
  }
}

/**************************/
/* BELOW 560px (Tablet) */
/**************************/

/* 560 / 16 = 35 */
@media (max-width: 35em) {
  .A_modal {
    margin: 4.8rem 3.2rem;
    height: calc(95vh - (4.8rem * 2));

    background-color: white;
  }

  .panel_title {
    margin-bottom: 2.4rem;
  }

  .panel_menu_content_container {
    flex-direction: column;
    gap: 3.2rem;
    height: calc(95vh - (4.8rem * 2) - (3.2rem * 4.75));
  }

  .panel_menu {
    width: 100%;
    text-align: center;
    flex: 0 1 auto;

    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    column-gap: 2.4rem;
    padding-bottom: 2.4rem;
    border-bottom: 1px solid #555;
  }

  .panel_content {
    width: 100%;
    /* height: 50vh; */
  }
}

/*
- Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

- Spacing system (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/

